# chemicalite

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.txt  README  README.md  README.rst  bfp_ops.c  bfp_ops.h  bitstring.c  bitstring.h  chemicalite.c  chemicalite.cpp  chemicalite.h  inttypes.h  molecule.c  molecule.h  object.c  object.h  rdkit_adapter.cpp  rdkit_adapter.h  rdtree.c  rdtree.h  utils.h
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-in-conda.yml  conda-forge-build.yml
cmake/Modules/: FindRDKit.cmake  FindSqlite3.cmake
conda/apsw/: build.sh  meta.yaml
conda/pysqlite/: meta.yaml  setup.cfg.patch
docs/: Makefile  api.rst  apsw.rst  build.rst  conf.py  create_bfp_data.py  create_chembldb.py  index.rst  installation.rst  links.rst  make.bat  match_count.py  pragma.rst  pysqlite.rst  substructure_search.py  tanimoto_count.py  tanimoto_search.py  tutorial.rst  tutorial_1st.rst  tutorial_2nd.rst
examples/: CMakeLists.txt  create_chembldb.py  match_count.py  setup_chembl.sql  substructure_search.py  tanimoto_count.py  tanimoto_search.py
examples/example1/: CMakeLists.txt  main.cpp
examples/example2/: CMakeLists.txt  main.cpp
examples/example3/: CMakeLists.txt  main.cpp
examples/example4/: CMakeLists.txt  main.cpp
examples/tutorial/: tanimoto_search.py
misc/: demo.py
pytests/: CMakeLists.txt  bitstring.py  chemicalite.py  descriptors.py  load_extension.py  molecule.py  rdtree.py
src/: CMakeLists.txt  bfp.cpp  bfp.hpp  bfp_compare.cpp  bfp_compare.hpp  bfp_descriptors.cpp  bfp_descriptors.hpp  bfp_ops.c  bfp_ops.cpp  bfp_ops.h  bfp_ops.hpp  bitstring.c  chemicalite.c  chemicalite.cpp  chemicalite.h  file_io.cpp  file_io.hpp  logging.c  logging.cpp  logging.h  logging.hpp  mol.cpp  mol.hpp  mol_chemtransforms.cpp  mol_chemtransforms.hpp  mol_compare.cpp  mol_compare.hpp  mol_descriptors.cpp  mol_descriptors.hpp  mol_fmcs.cpp  mol_fmcs.hpp  mol_formats.cpp  mol_formats.hpp  mol_hash.cpp  mol_hash.hpp  mol_props.cpp  mol_props.hpp  mol_standardize.cpp  mol_standardize.hpp  mol_to_bfp.cpp  (+35 more)
src/pytests/: descriptors.py  done_molhash.py  molecule.py  rdtree.py
src/tests/: CMakeLists.txt  initialize.c  rdtree_1st_insert.c  rdtree_single_select_by_subset.c  test_bfp.cpp  test_common.cpp  test_common.hpp  test_mol_chemtransforms.cpp  test_mol_compare.cpp  test_mol_descriptors.cpp  test_mol_find_mcs.cpp  test_mol_formats.cpp  test_mol_hash.cpp  test_mol_standardize.cpp  test_periodic_table.cpp  test_rdtree_create.cpp  test_rdtree_insert.cpp  test_rdtree_select.cpp  test_rdtree_update.cpp  test_sdf_reader.cpp  test_sdf_writer.cpp  test_smi_reader.cpp  test_smi_writer.cpp  test_utils.cpp  test_version_info.cpp
src/tests/data/: cdk2_stereo.csv  chembl_29_sample.txt
test/: CMakeLists.txt  bitstring.py  chemicalite.py  create_rdtree.c  descriptors.py  initialize.c  molecule.py  rdtree.py  rdtree_1st_insert.c  rdtree_single_select_by_id.c  rdtree_single_select_by_subset.c  testcommon.c  testcommon.h
tests/: CMakeLists.txt  create_rdtree.c  descriptors.py  molecule.py  rdtree_1st_insert.c  rdtree_single_select_by_id.c  smiles_roundtrip.c  test_common.hpp  testcommon.c  testcommon.h  versions.c
